Added search and sort functionality

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,13 @@
 </head>
 <body>
 <header>Country data</header>
+<input class="search-bar" id="search" placeholder="Search for a country">
 <nav class="navBar">
-    
+    <button class="btn field" id="btn1">Name</button>
+    <button class="btn field" id="btn2">Capital</button>
+    <button class="btn field" id="btn3">Region</button>
+    <button class="btn field" id="btn4">Language</button>
+    <button class="btn field" id="btn5">Currency</button>
 </nav>
 <section class="country-list">
 </section>
